# colors

./: .gitignore  .gitmodules  CMakeLists.txt  ColorsGPU.sln  Makefile  README.md  RuleGenerator.cpp  RuleGenerator.h  board.cpp  board.h  game.cpp  game.h  initializer.cpp  initializer.h  input_manager.cpp  input_manager.h  kernel.cu  kernel.cuh  main.cpp  old_controls.txt  rainbows.h  screen.cpp  screen.h
ColorsGPU/: ColorsGPU.vcxproj  board.cpp  board.h  board_constants.h  info.h  initializer.cpp  initializer.h  kernel.cu  kernel.cuh  main.cpp  screen.cpp  screen.h
ColorsGPU/Debug/: kernel.cu.cache  kernel.cu.deps  vc120.idb
ColorsGPU/Debug/ColorsGPU.tlog/: CL.read.1.tlog  CL.write.1.tlog  ColorsGPU.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ColorsGPU/Release/: kernel.cu.cache  kernel.cu.deps
ColorsGPU/Release/ColorsGPU.tlog/: CL.read.1.tlog  CL.write.1.tlog  ColorsGPU.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ColorsGPU/x64/Debug/: kernel.cu.cache  kernel.cu.deps  vc120.idb
ColorsGPU/x64/Debug/ColorsGPU.tlog/: CL.read.1.tlog  CL.write.1.tlog  ColorsGPU.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ColorsGPU/x64/Release/: common.cu.cache  common.cu.deps  kernel.cu.cache  kernel.cu.deps
ColorsGPU/x64/Release/ColorsGPU.tlog/: CL.read.1.tlog  CL.write.1.tlog  ColorsGPU.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
angular_ui/: angular.json  package-lock.json  package.json
angular_ui/src/app/: app.component.spec.ts  app.component.ts
cuda_kernels/: CMakeLists.txt  Makefile  common.cu  hodge.cu  hodge.cuh  lifelike.cu
gradient_gen/: README.txt  generate_gradient.sh  gradient.php  palette.php
rulesets/: CMakeLists.txt  Makefile  hodge.cpp  hodge.h  initializer.cpp  initializer.h  lifelike.cpp  lifelike.h  rainbows.cpp  rainbows.h  ruleset.cpp  ruleset.h
rulesets/ants/: CMakeLists.txt  ant.h  ant_location.h  ants.cpp  ants.h  colony.cpp  colony.h  food.h
rulesets/cuda_kernels/: Makefile  common.cuh  lifelike.cu  lifelike.cuh
rulesets/empty_ruleset/: CMakeLists.txt  empty_ruleset.cpp  empty_ruleset.h
rulesets/hodge/: CMakeLists.txt  hodge.cpp  hodge.cu  hodge.cuh  hodge.h
rulesets/include/: initializer.h  rainbows.h  ruleset.h
rulesets/lifelike/: CMakeLists.txt  lifelike.cpp  lifelike.cuh  lifelike.h
rulesets/utilities/: CMakeLists.txt  board.h.cu  imgproc.cu  imgproc.cuh  imgproc.h.cu
rulesets/video_feedback/: CMakeLists.txt  video_feedback.cpp  video_feedback.h
rulesets/video_feedback/transformations/: CMakeLists.txt  blend.cpp  blend.cu  blend.h  brightness.cu  brightness.h  noise.cpp  noise.cu  noise.h  rotation.cpp  rotation.cu  rotation.h  transformation.cpp  transformation.cu  transformation.h  transformations.h  zoom.cpp  zoom.cu  zoom.h
src/: CMakeLists.txt  game.cpp  game.h  input_manager.cpp  kernel.cu  main.cpp
src/rulesets/: CMakeLists.txt  initializer.cpp  rainbows.cpp  ruleset.cpp
src/rulesets/ants/: CMakeLists.txt  ant.h  ants.cpp  ants.h  colony.cpp  colony.h  food.h
src/rulesets/empty_ruleset/: CMakeLists.txt  empty_ruleset.cpp  empty_ruleset.cu  empty_ruleset.cuh  empty_ruleset.h
src/rulesets/hodge/: CMakeLists.txt  hodge.cpp  hodge.cu  hodge.cuh  hodge.h
src/rulesets/include/: font8x8.h  initializer.h  rainbows.h
src/rulesets/lifelike/: CMakeLists.txt  LifeLike.txt  lifelike.cpp  lifelike.cu  lifelike.cuh  lifelike.h
src/rulesets/painting/: CMakeLists.txt  painting.cpp  painting.cu  painting.cuh  painting.h  stroke.cpp  stroke.h  term.h  terms.cpp  terms.h
src/rulesets/rainbows/: rainbows.cpp  rainbows.cu  rainbows.cuh  rainbows.h
src/rulesets/utilities/: CMakeLists.txt  board.cuh  board.h.cu  buffer.cuh  buffer.h.cu  imgproc.cuh  imgproc.h.cu  initializer.cpp  initializer.h  ruleset.cpp  ruleset.h
src/rulesets/utilities/rainbows/: CMakeLists.txt  gradients.h  rainbows.cpp  rainbows.cu  rainbows.cuh  rainbows.h
x64/Debug/: ColorsGPU.ilk
